--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,6 +48,9 @@ dependencies {
     implementation 'com.google.android.gms:play-services-auth:18.1.0'
 
     implementation 'com.microsoft.graph:microsoft-graph:2.3.0'
+    implementation 'com.facebook.android:facebook-android-sdk:5.15.3'
+    implementation 'com.microsoft.identity.client:msal:1.4.0'
+    implementation 'com.android.volley:volley:1.1.1'
 
 
 
